<resources>
    <string name="app_name">跳蚤市场</string>
    <string name="title_activity_animation">Animation</string>
    <string name="title_activity_animation_test">AnimationTest</string>
    <string name="AnimationTest_top">四川商院</string>
    <string name="AnimationTest_buttom">——跳蚤市场</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_home">首页</string>
    <string name="main_search">搜索</string>
    <string name="main_my">我的</string>
    <string name="all">全部</string>
    <string name="study">学习相关</string>
    <string name="living_goods">生活用品</string>
    <string name="other">其它</string>
    <string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="register">注册新用户</string>
    <string name="sell">出售</string>
    <string name="issue">发布</string>
    <string name="buy">求购</string>
    <string name="logout">退出登录</string>
    <string name="type">类型：</string>
    <string name="chaffer">可小刀</string>
    <string name="contact">联系人：</string>
    <string name="phone">联系方式：</string>
    <string name="add_image">添加图片</string>
    <string name="description">物品预览图</string>
    <string name="title">标题</string>
    <string name="time">2018-5-21</string>
    <string name="price">¥ 99</string>
    <string name="particulars">商品详细</string>
    <string name="please">请联系</string>
    <string name="myGoods">我的商品</string>
    <string name="browsingHistory">浏览历史</string>
    <string name="aboutUs">关于我们</string>
    <string name="setting">设置</string>
    <string name="app">跳蚤市场V1.0</string>
    <string name="IntroductionHelp">介绍与帮助</string>
    <string name="changePassword">修改密码</string>
</resources>
