<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#303f9f"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/home_all"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/home_selector"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textSize="16sp"
                android:textColor="#FFF"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_study"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/home_selector"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_tv_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study"
                android:textSize="16sp"
                android:textColor="#FFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_living_goods"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/home_selector"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_tv_living_goods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/living_goods"
                android:textSize="16sp"
                android:textColor="#FFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_other"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/home_selector"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_tv_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="16sp"
                android:textColor="#FFF" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

</LinearLayout>
