<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_search_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp">
            <ImageView
                android:id="@+id/item_search_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description"
                android:scaleType="fitXY"
                android:src="@drawable/guide_image1" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_search_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="#3d9e9e"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:background="@drawable/search_thing" />

            <TextView
                android:id="@+id/item_search_tv_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:text="@string/type"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:background="@android:drawable/ic_menu_save" />

            <TextView
                android:id="@+id/item_search_tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="11sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:background="@drawable/ic_time" />

            <TextView
                android:id="@+id/item_search_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/time"
                android:textSize="11sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/item_search_tv_chaffer"
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/chaffer_selector"
            android:gravity="center"
            android:text="@string/chaffer"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>