<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/item_img_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description"
                android:scaleType="fitXY"
                android:src="@drawable/guide_image1" />

            <ImageView
                android:id="@+id/item_img_type"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/goods_cs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:text="@string/title"
                android:textColor="#91C7BA"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/item_tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="bottom"
                        android:maxLines="1"
                        android:text="@string/price"
                        android:textColor="#FF843E"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/item_tv_chaffer"
                        android:layout_width="55dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/chaffer_selector"
                        android:gravity="center"
                        android:text="@string/chaffer"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
