<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xw.h2market.MainActivity">

    <FrameLayout
        android:id="@+id/main_Container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/layout_border_top"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/main_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_iv_home"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:background="@drawable/home_launcher_selector"
                 />

            <TextView
                android:id="@+id/main_tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_home"
                android:textColor="@android:color/secondary_text_dark"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_iv_search"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:background="@drawable/search_launcher_selector"
                />

            <TextView
                android:id="@+id/main_tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_search"
                android:textColor="@android:color/secondary_text_dark"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_iv_my"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:background="@drawable/my_launcher_selector"
                />

            <TextView
                android:id="@+id/main_tv_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_my"
                android:textColor="@android:color/secondary_text_dark" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
