<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_issue"
        tools:context="com.xw.h2market.IssueActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/issue_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                app:navigationIcon="@drawable/nav_back"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/issue">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="#00FFFFFF"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioGroup
                android:id="@+id/sell_and_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/issue_tv_sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/issue_rb_sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/issue_tv_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/issue_rb_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/issue_edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="标题"
                android:maxLength="20"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/issue_tv_titleNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0/20"
                android:textColor="#999999"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/issue_edt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="价格（面议）"
                android:singleLine="true"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/issue_spinner"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/type">

                </Spinner>


                <Switch
                    android:id="@+id/issue_switch_chaffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:switchMinWidth="40dp"
                    android:text="@string/chaffer"
                    android:textColor="#000"
                    android:textOff=" "
                    android:textOn=" "
                    android:textSize="18sp"
                    android:thumb="@drawable/selector_thumb"
                    android:track="@drawable/selector_track" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="#00FFFFFF"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/issue_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="请输入姓名"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" (至少填一个)"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/issue_edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="电话"
                        android:singleLine="true"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/issue_edt_qq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="QQ"
                        android:singleLine="true"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="#00FFFFFF"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/issue_edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="说几句话描述一下呗"
                android:maxLength="100"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/issue_tv_contentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0/100"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/issue_tv_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/add_image"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/issue_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/issue_tv_jd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginRight="14dp"
                android:textSize="10sp" />

            <ProgressBar
                android:id="@+id/issue_progress_progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:max="100"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/issue_button"
            android:text="@string/issue"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </LinearLayout>
</ScrollView>